made styling fixes for the home page. fixing mainly alignment issues and responsiveness optimization.

--- a/sondo-app/src/home.css
+++ b/sondo-app/src/home.css
@@ -8,6 +8,26 @@
 body {
   background: linear-gradient(to bottom, #1E88E5, #E3F2FD);
   color: #000;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  width: 90vw;
+}
+
+.home {
+  flex-direction: column;
+  height: 100vh;
+  width: 90vw;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  max-width: fit-content;
 }
 
 .header {
@@ -15,6 +35,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
+  background: none;
 }
 
 .logo {
@@ -47,6 +68,7 @@ nav a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80vw;
   margin: 30px auto;
   padding: 10px;
 }
